FIX Esconde scrollbar en otros navegadores

--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -13,5 +13,10 @@ main {
   max-width: 694px;
   min-width: 300px;
 
-  scrollbar-width: none;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+ /* Hide scrollbar for Chrome, Safari and Opera */
+main::-webkit-scrollbar {
+  display: none;
 }
